@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Oct 18 10:37:53 2001 -->
+<!-- Thu Oct 18 13:22:14 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -157,8 +157,12 @@ are in process.
 such as 
 <a href="http://www.procmail.org/" TARGET="Resource Window">procmail</a>
 or 
+
 <a href="http://www.flounder.net/~mrsam/maildrop/" TARGET="Resource Window">maildrop</a> 
-for final mail delivery.  Again, this is only required if you are 
+This doesn't mean you need to maintain a .procmailrc or .mailfilter file; TMDA just
+uses the executable to perform final mail delivery.  Any program capable of 
+accepting a message on stdin and writing it to mailbox will suffice.  But
+again, this is only required if you are 
 <strong>NOT running qmail!</strong>
 <br><br>
 
